--- a/package.json
+++ b/package.json
@@ -12,9 +12,14 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@codemirror/lang-java": "^6.0.1",
+    "@codemirror/theme-one-dark": "^6.1.2",
     "axios": "^1.5.0",
+    "codemirror": "^6.0.1",
+    "mavon-editor": "^3.0.1",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
+    "vue-codemirror": "^6.1.1",
     "vue-router": "^4.2.4"
   },
   "devDependencies": {
