--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
   "dependencies": {
     "@codemirror/lang-java": "^6.0.1",
     "@codemirror/theme-one-dark": "^6.1.2",
+    "@vueuse/core": "^10.5.0",
     "axios": "^1.5.0",
     "codemirror": "^6.0.1",
     "echarts": "^5.4.3",
+    "install": "^0.13.0",
     "mavon-editor": "^3.0.1",
+    "monaco-editor": "^0.44.0",
+    "npm": "^10.2.0",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
     "vue-codemirror": "^6.1.1",
